FIX: undo-redo setup

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -121,6 +121,7 @@
 (use-package evil
     :init      ;; tweak evil's configuration before loading it
     (setq evil-want-integration t) ;; This is optional since it's already set to t by default.
+    (setq evil-undo-system 'undo-redo)
     (setq evil-want-keybinding nil)
     (setq evil-vsplit-window-right t)
     (setq evil-split-window-below t)
@@ -131,7 +132,6 @@
     (setq evil-collection-mode-list '(dashboard dired ibuffer))
     (evil-collection-init))
   (use-package evil-tutor)
-(evil-set-undo-system 'undo-redo)
 #+end_src
 
 
